Fixed sidebar highlight and anchor jump

--- a/PropertyPage/property.scss
+++ b/PropertyPage/property.scss
@@ -76,6 +76,7 @@ main {
         width: 80%;
         position: absolute;
         box-sizing: border-box;
+        top: 1em;
 
         .borderSearchBar {
             gap: 0.5em;
